<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <!-- Connection Status -->
        <TextView
            android:id="@+id/text_connection_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/device_connected"
            android:textColor="@color/text_color_grey"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <!-- Buttons for EMG Data Collection -->
        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_connection_status">

            <Button
                android:id="@+id/button_connect_glove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/connect_glove" />

            <Button
                android:id="@+id/button_load_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/load_from_file" />
        </LinearLayout>

        <!-- Recording Controls -->
        <LinearLayout
            android:id="@+id/recording_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/button_container">

            <Button
                android:id="@+id/button_start_recording"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/start_recording" />

            <Button
                android:id="@+id/button_stop_recording"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/stop_recording" />
        </LinearLayout>

        <!-- Progress Indicator -->
        <ProgressBar
            android:id="@+id/progress_recording"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="100"
            android:progress="0"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/recording_controls" />

        <!-- Status Text -->
        <TextView
            android:id="@+id/text_recording_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/text_color_grey"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/progress_recording" />

        <TextView
            android:id="@+id/text_emg_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emg_signal"
            android:textColor="@color/text_color_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/text_recording_status"
            tools:layout_editor_absoluteX="16dp" />
        <TextView
            android:id="@+id/text_emg_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/emg_graph"
            android:textColor="@color/text_color_grey"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/text_emg_title" />

        <!-- EMG Graph View -->
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/emg_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_emg_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
